--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,53 +7,43 @@
 
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="ExtraText"
-        android:allowBackup="false">
+        >
         <activity android:name=".grayToBinary"
-            android:screenOrientation="portrait"
             tools:ignore="LockedOrientationActivity"
         />
         <activity android:name=".binaryToGray"
-            android:screenOrientation="portrait"
             tools:ignore="LockedOrientationActivity"
             />
         <activity
             android:name=".anyBaseToAnyBase"
-            android:screenOrientation="portrait"
             tools:ignore="LockedOrientationActivity" />
         <activity
             android:name=".HexToOther"
-            android:screenOrientation="portrait"
             tools:ignore="LockedOrientationActivity" />
         <activity
             android:name=".OctToOther"
-            android:screenOrientation="portrait"
             tools:ignore="LockedOrientationActivity" />
         <activity
             android:name=".BinToOther"
-            android:screenOrientation="portrait"
             tools:ignore="LockedOrientationActivity" />
         <activity
             android:name=".DecToOther"
-            android:screenOrientation="portrait"
+
             tools:ignore="LockedOrientationActivity" />
         <activity
             android:name=".SplashScreen"
-            android:screenOrientation="portrait"
             android:theme="@style/splashScreen"
-            tools:ignore="LockedOrientationActivity">
+            tools:ignore="LockedOrientationActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
             android:name=".MainActivity"
-            android:screenOrientation="portrait"
             android:theme="@style/AppTheme"
             tools:ignore="LockedOrientationActivity" />
 
